# stellarweave-client

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  REUSE.toml  SECURITY.md
.github/: CODEOWNERS  license-config.json  license-header.txt
.github/workflows/: check_license_header.yml  clang-format.yml  clang_format-clang_tidy.yml  codeql.yml  enforce_filenames.yml  reuse_compliance_check.yml
ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/engine/: test.cpp
